--- a/donkey/wp-content/languages/continents-cities-ja.po
+++ b/donkey/wp-content/languages/continents-cities-ja.po
@@ -1,5 +1,5 @@
-# Translation of WordPress - 5.7.x - Development - Continents & Cities in Japanese
-# This file is distributed under the same license as the WordPress - 5.7.x - Development - Continents & Cities package.
+# Translation of WordPress - 5.7.x - Continents & Cities in Japanese
+# This file is distributed under the same license as the WordPress - 5.7.x - Continents & Cities package.
 msgid ""
 msgstr ""
 "PO-Revision-Date: 2020-01-01 21:41:48+0000\n"
@@ -9,155 +9,7 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: GlotPress/3.0.0-alpha.2\n"
 "Language: ja_JP\n"
-"Project-Id-Version: WordPress - 5.7.x - Development - Continents & Cities\n"
-
-#: wp-admin/includes/continents-cities.php:478
-msgid "Saratov"
-msgstr "サラトフ"
-
-#: wp-admin/includes/continents-cities.php:353
-msgid "Yangon"
-msgstr "ヤンゴン"
-
-#: wp-admin/includes/continents-cities.php:287
-msgid "Famagusta"
-msgstr "ファマグスタ"
-
-#: wp-admin/includes/continents-cities.php:266
-msgid "Atyrau"
-msgstr "アティラウ"
-
-#: wp-admin/includes/continents-cities.php:204
-msgid "Punta Arenas"
-msgstr "プンタ・アレーナス"
-
-#: wp-admin/includes/continents-cities.php:542
-msgid "Pohnpei"
-msgstr "ポンペイ"
-
-#: wp-admin/includes/continents-cities.php:516
-msgid "Chuuk"
-msgstr "チューク"
-
-#: wp-admin/includes/continents-cities.php:514
-msgid "Bougainville"
-msgstr "ブーゲンビル"
-
-#: wp-admin/includes/continents-cities.php:486
-msgid "Ulyanovsk"
-msgstr "ウラジオストク"
-
-#: wp-admin/includes/continents-cities.php:457
-msgid "Kirov"
-msgstr "キーロフ"
-
-#: wp-admin/includes/continents-cities.php:445
-msgid "Busingen"
-msgstr "ビュージンゲン"
-
-#: wp-admin/includes/continents-cities.php:436
-msgid "Astrakhan"
-msgstr "アストラハン"
-
-#: wp-admin/includes/continents-cities.php:349
-msgid "Ust-Nera"
-msgstr "ウスチ＝ネラ"
-
-#: wp-admin/includes/continents-cities.php:344
-msgid "Tomsk"
-msgstr "トムスク"
-
-#: wp-admin/includes/continents-cities.php:335
-msgid "Srednekolymsk"
-msgstr "スレドネコリムスク"
-
-#: wp-admin/includes/continents-cities.php:318
-msgid "Novokuznetsk"
-msgstr "ノヴォクズネツク"
-
-#: wp-admin/includes/continents-cities.php:305
-msgid "Khandyga"
-msgstr "ハンドゥイガ"
-
-#: wp-admin/includes/continents-cities.php:303
-msgid "Kathmandu"
-msgstr "カトマンズ"
-
-#: wp-admin/includes/continents-cities.php:290
-msgid "Hebron"
-msgstr "ヘブロン"
-
-#: wp-admin/includes/continents-cities.php:276
-msgid "Chita"
-msgstr "チタ"
-
-#: wp-admin/includes/continents-cities.php:271
-msgid "Barnaul"
-msgstr "バルナウル"
-
-#: wp-admin/includes/continents-cities.php:251
-msgid "Troll"
-msgstr "トロール"
-
-#: wp-admin/includes/continents-cities.php:244
-msgid "Macquarie"
-msgstr "マッコーリー"
-
-#: wp-admin/includes/continents-cities.php:219
-msgid "Sitka"
-msgstr "シトカ"
-
-#: wp-admin/includes/continents-cities.php:213
-msgid "Santarem"
-msgstr "サンタレン"
-
-#: wp-admin/includes/continents-cities.php:212
-msgid "Santa Isabel"
-msgstr "サンタイサベル"
-
-#: wp-admin/includes/continents-cities.php:194
-msgid "Ojinaga"
-msgstr "オヒナガ"
-
-#: wp-admin/includes/continents-cities.php:191
-msgid "Beulah"
-msgstr "ベウラ"
-
-#: wp-admin/includes/continents-cities.php:177
-msgid "Metlakatla"
-msgstr "メトラカトラ"
-
-#: wp-admin/includes/continents-cities.php:172
-msgid "Matamoros"
-msgstr "マタモロス"
-
-#: wp-admin/includes/continents-cities.php:166
-msgid "Lower Princes"
-msgstr "ローワープリンシズ"
-
-#: wp-admin/includes/continents-cities.php:161
-msgid "Kralendijk"
-msgstr "クラレンダイク"
-
-#: wp-admin/includes/continents-cities.php:127
-msgid "Fort Nelson"
-msgstr "フォートネルソン"
-
-#: wp-admin/includes/continents-cities.php:114
-msgid "Creston"
-msgstr "クレストン"
-
-#: wp-admin/includes/continents-cities.php:93
-msgid "Bahia Banderas"
-msgstr "バイーア・デ・バンデラス"
-
-#: wp-admin/includes/continents-cities.php:83
-msgid "Salta"
-msgstr "サルタ"
-
-#: wp-admin/includes/continents-cities.php:39
-msgid "Juba"
-msgstr "ジュバ"
+"Project-Id-Version: WordPress - 5.7.x - Continents & Cities\n"
 
 #: wp-admin/includes/continents-cities.php:554
 msgid "Yap"
@@ -206,6 +58,10 @@ msgstr "ポートモレスビー"
 #: wp-admin/includes/continents-cities.php:543
 msgid "Ponape"
 msgstr "ポンペイ島"
+
+#: wp-admin/includes/continents-cities.php:542
+msgid "Pohnpei"
+msgstr "ポンペイ"
 
 #: wp-admin/includes/continents-cities.php:541
 msgid "Pitcairn"
@@ -307,9 +163,17 @@ msgstr "エファテ島"
 msgid "Easter"
 msgstr "イースター島"
 
+#: wp-admin/includes/continents-cities.php:516
+msgid "Chuuk"
+msgstr "チューク"
+
 #: wp-admin/includes/continents-cities.php:515
 msgid "Chatham"
 msgstr "チャタム"
+
+#: wp-admin/includes/continents-cities.php:514
+msgid "Bougainville"
+msgstr "ブーゲンビル"
 
 #: wp-admin/includes/continents-cities.php:513
 msgid "Auckland"
@@ -411,6 +275,10 @@ msgstr "ファドゥーツ"
 msgid "Uzhgorod"
 msgstr "ウージュホロド"
 
+#: wp-admin/includes/continents-cities.php:486
+msgid "Ulyanovsk"
+msgstr "ウラジオストク"
+
 #: wp-admin/includes/continents-cities.php:485
 msgid "Tiraspol"
 msgstr "ティラスポリ"
@@ -438,6 +306,10 @@ msgstr "スコピエ"
 #: wp-admin/includes/continents-cities.php:479
 msgid "Simferopol"
 msgstr "シンフェロポリ"
+
+#: wp-admin/includes/continents-cities.php:478
+msgid "Saratov"
+msgstr "サラトフ"
 
 #: wp-admin/includes/continents-cities.php:477
 msgid "Sarajevo"
@@ -515,6 +387,10 @@ msgstr "リュブリャナ"
 msgid "Lisbon"
 msgstr "リスボン"
 
+#: wp-admin/includes/continents-cities.php:457
+msgid "Kirov"
+msgstr "キーロフ"
+
 #: wp-admin/includes/continents-cities.php:456
 msgid "Kiev"
 msgstr "キエフ"
@@ -555,6 +431,10 @@ msgstr "コペンハーゲン"
 msgid "Chisinau"
 msgstr "キシナウ"
 
+#: wp-admin/includes/continents-cities.php:445
+msgid "Busingen"
+msgstr "ビュージンゲン"
+
 #: wp-admin/includes/continents-cities.php:444
 msgid "Budapest"
 msgstr "ブダペスト"
@@ -587,6 +467,10 @@ msgstr "ベルファスト"
 msgid "Athens"
 msgstr "アテネ"
 
+#: wp-admin/includes/continents-cities.php:436
+msgid "Astrakhan"
+msgstr "アストラハン"
+
 #: wp-admin/includes/continents-cities.php:435
 msgid "Andorra"
 msgstr "アンドラ"
@@ -603,13 +487,13 @@ msgstr "ヨーロッパ"
 msgid "Zulu"
 msgstr "ズールー"
 
-#: wp-admin/includes/continents-cities.php:429
-msgid "UTC"
-msgstr "協定世界時 (UTC)"
-
 #: wp-admin/includes/continents-cities.php:430
 msgid "Universal"
 msgstr "ユニバーサル"
+
+#: wp-admin/includes/continents-cities.php:429
+msgid "UTC"
+msgstr "協定世界時 (UTC)"
 
 #: wp-admin/includes/continents-cities.php:428
 msgid "UCT"
@@ -775,13 +659,13 @@ msgstr "クイーンズランド"
 msgid "Perth"
 msgstr "パース"
 
-#: wp-admin/includes/continents-cities.php:385
-msgid "NSW"
-msgstr "ニューサウスウェールズ"
-
 #: wp-admin/includes/continents-cities.php:386
 msgid "North"
 msgstr "北部"
+
+#: wp-admin/includes/continents-cities.php:385
+msgid "NSW"
+msgstr "ニューサウスウェールズ"
 
 #: wp-admin/includes/continents-cities.php:384
 msgid "Melbourne"
@@ -899,6 +783,10 @@ msgstr "エレバン"
 msgid "Yekaterinburg"
 msgstr "エカテリンブルク"
 
+#: wp-admin/includes/continents-cities.php:353
+msgid "Yangon"
+msgstr "ヤンゴン"
+
 #: wp-admin/includes/continents-cities.php:352
 msgid "Yakutsk"
 msgstr "ヤクーツク"
@@ -910,6 +798,10 @@ msgstr "ウラジオストク"
 #: wp-admin/includes/continents-cities.php:350
 msgid "Vientiane"
 msgstr "ヴィエンチャン"
+
+#: wp-admin/includes/continents-cities.php:349
+msgid "Ust-Nera"
+msgstr "ウスチ＝ネラ"
 
 #: wp-admin/includes/continents-cities.php:348
 msgid "Urumqi"
@@ -926,6 +818,10 @@ msgstr "ウランバートル"
 #: wp-admin/includes/continents-cities.php:345
 msgid "Ujung Pandang"
 msgstr "マカッサル (ウジュン・パンダン)"
+
+#: wp-admin/includes/continents-cities.php:344
+msgid "Tomsk"
+msgstr "トムスク"
 
 #: wp-admin/includes/continents-cities.php:343
 msgid "Tokyo"
@@ -958,6 +854,10 @@ msgstr "タシュケント"
 #: wp-admin/includes/continents-cities.php:336
 msgid "Taipei"
 msgstr "台北"
+
+#: wp-admin/includes/continents-cities.php:335
+msgid "Srednekolymsk"
+msgstr "スレドネコリムスク"
 
 #: wp-admin/includes/continents-cities.php:334
 msgid "Singapore"
@@ -1023,6 +923,10 @@ msgstr "オムスク"
 msgid "Novosibirsk"
 msgstr "ノヴォシビルスク"
 
+#: wp-admin/includes/continents-cities.php:318
+msgid "Novokuznetsk"
+msgstr "ノヴォクズネツク"
+
 #: wp-admin/includes/continents-cities.php:317
 #: wp-admin/includes/continents-cities.php:468
 msgid "Nicosia"
@@ -1072,8 +976,16 @@ msgstr "クラスノヤルスク"
 msgid "Kolkata"
 msgstr "コルカタ"
 
+#: wp-admin/includes/continents-cities.php:305
+msgid "Khandyga"
+msgstr "ハンドゥイガ"
+
 #: wp-admin/includes/continents-cities.php:304
 msgid "Katmandu"
+msgstr "カトマンズ"
+
+#: wp-admin/includes/continents-cities.php:303
+msgid "Kathmandu"
 msgstr "カトマンズ"
 
 #: wp-admin/includes/continents-cities.php:302
@@ -1125,6 +1037,10 @@ msgstr "香港"
 msgid "Ho Chi Minh"
 msgstr "ホーチミン"
 
+#: wp-admin/includes/continents-cities.php:290
+msgid "Hebron"
+msgstr "ヘブロン"
+
 #: wp-admin/includes/continents-cities.php:289
 msgid "Harbin"
 msgstr "ハルビン"
@@ -1132,6 +1048,10 @@ msgstr "ハルビン"
 #: wp-admin/includes/continents-cities.php:288
 msgid "Gaza"
 msgstr "ガザ"
+
+#: wp-admin/includes/continents-cities.php:287
+msgid "Famagusta"
+msgstr "ファマグスタ"
 
 #: wp-admin/includes/continents-cities.php:286
 msgid "Dushanbe"
@@ -1173,6 +1093,10 @@ msgstr "重慶"
 msgid "Choibalsan"
 msgstr "チョイバルサン"
 
+#: wp-admin/includes/continents-cities.php:276
+msgid "Chita"
+msgstr "チタ"
+
 #: wp-admin/includes/continents-cities.php:275
 msgid "Calcutta"
 msgstr "カルカッタ"
@@ -1189,6 +1113,10 @@ msgstr "ビシュケク"
 msgid "Beirut"
 msgstr "ベイルート"
 
+#: wp-admin/includes/continents-cities.php:271
+msgid "Barnaul"
+msgstr "バルナウル"
+
 #: wp-admin/includes/continents-cities.php:270
 msgid "Bangkok"
 msgstr "バンコク"
@@ -1204,6 +1132,10 @@ msgstr "バーレーン"
 #: wp-admin/includes/continents-cities.php:267
 msgid "Baghdad"
 msgstr "バグダード"
+
+#: wp-admin/includes/continents-cities.php:266
+msgid "Atyrau"
+msgstr "アティラウ"
 
 #: wp-admin/includes/continents-cities.php:265
 msgid "Ashkhabad"
@@ -1253,6 +1185,10 @@ msgstr "北極"
 msgid "Vostok"
 msgstr "ボストーク"
 
+#: wp-admin/includes/continents-cities.php:251
+msgid "Troll"
+msgstr "トロール"
+
 #: wp-admin/includes/continents-cities.php:250
 msgid "Syowa"
 msgstr "昭和基地"
@@ -1276,6 +1212,10 @@ msgstr "マクマード"
 #: wp-admin/includes/continents-cities.php:245
 msgid "Mawson"
 msgstr "モーソン"
+
+#: wp-admin/includes/continents-cities.php:244
+msgid "Macquarie"
+msgstr "マッコーリー"
 
 #: wp-admin/includes/continents-cities.php:243
 msgid "DumontDUrville"
@@ -1369,6 +1309,10 @@ msgstr "セントジョーンズ"
 msgid "St Barthelemy"
 msgstr "サン・バルテルミー"
 
+#: wp-admin/includes/continents-cities.php:219
+msgid "Sitka"
+msgstr "シトカ"
+
 #: wp-admin/includes/continents-cities.php:218
 msgid "Shiprock"
 msgstr "シップロック"
@@ -1388,6 +1332,14 @@ msgstr "サントドミンゴ"
 #: wp-admin/includes/continents-cities.php:214
 msgid "Santiago"
 msgstr "サンティアゴ"
+
+#: wp-admin/includes/continents-cities.php:213
+msgid "Santarem"
+msgstr "サンタレン"
+
+#: wp-admin/includes/continents-cities.php:212
+msgid "Santa Isabel"
+msgstr "サンタイサベル"
 
 #: wp-admin/includes/continents-cities.php:211
 msgid "Rosario"
@@ -1417,6 +1369,10 @@ msgstr "ランキンインレット"
 msgid "Rainy River"
 msgstr "レイニーリバー"
 
+#: wp-admin/includes/continents-cities.php:204
+msgid "Punta Arenas"
+msgstr "プンタ・アレーナス"
+
 #: wp-admin/includes/continents-cities.php:203
 msgid "Puerto Rico"
 msgstr "プエルトリコ"
@@ -1429,13 +1385,13 @@ msgstr "ポルトベーリョ"
 msgid "Porto Acre"
 msgstr "ポルトアクレ"
 
-#: wp-admin/includes/continents-cities.php:199
-msgid "Port of Spain"
-msgstr "ポートオブスペイン"
-
 #: wp-admin/includes/continents-cities.php:200
 msgid "Port-au-Prince"
 msgstr "ポルトープランス"
+
+#: wp-admin/includes/continents-cities.php:199
+msgid "Port of Spain"
+msgstr "ポートオブスペイン"
 
 #: wp-admin/includes/continents-cities.php:198
 msgid "Phoenix"
@@ -1453,6 +1409,10 @@ msgstr "パンニルトゥング"
 msgid "Panama"
 msgstr "パナマ"
 
+#: wp-admin/includes/continents-cities.php:194
+msgid "Ojinaga"
+msgstr "オヒナガ"
+
 #: wp-admin/includes/continents-cities.php:193
 msgid "New Salem"
 msgstr "ニューセーラム"
@@ -1460,6 +1420,10 @@ msgstr "ニューセーラム"
 #: wp-admin/includes/continents-cities.php:192
 msgid "Center"
 msgstr "センター"
+
+#: wp-admin/includes/continents-cities.php:191
+msgid "Beulah"
+msgstr "ベウラ"
 
 #: wp-admin/includes/continents-cities.php:190
 msgid "North Dakota"
@@ -1513,6 +1477,10 @@ msgstr "ミクロン"
 msgid "Mexico City"
 msgstr "メキシコシティ"
 
+#: wp-admin/includes/continents-cities.php:177
+msgid "Metlakatla"
+msgstr "メトラカトラ"
+
 #: wp-admin/includes/continents-cities.php:176
 msgid "Merida"
 msgstr "メリダ"
@@ -1524,6 +1492,10 @@ msgstr "メノミニー"
 #: wp-admin/includes/continents-cities.php:173
 msgid "Mazatlan"
 msgstr "マサトラン"
+
+#: wp-admin/includes/continents-cities.php:172
+msgid "Matamoros"
+msgstr "マタモロス"
 
 #: wp-admin/includes/continents-cities.php:171
 msgid "Martinique"
@@ -1545,6 +1517,10 @@ msgstr "マナグア"
 msgid "Maceio"
 msgstr "マセイオ"
 
+#: wp-admin/includes/continents-cities.php:166
+msgid "Lower Princes"
+msgstr "ローワープリンシズ"
+
 #: wp-admin/includes/continents-cities.php:164
 msgid "Los Angeles"
 msgstr "ロサンゼルス"
@@ -1556,6 +1532,10 @@ msgstr "リマ"
 #: wp-admin/includes/continents-cities.php:162
 msgid "La Paz"
 msgstr "ラパス"
+
+#: wp-admin/includes/continents-cities.php:161
+msgid "Kralendijk"
+msgstr "クラレンダイク"
 
 #: wp-admin/includes/continents-cities.php:160
 msgid "Knox IN"
@@ -1683,6 +1663,10 @@ msgstr "フォルタレザ"
 msgid "Fort Wayne"
 msgstr "フォートウェイン"
 
+#: wp-admin/includes/continents-cities.php:127
+msgid "Fort Nelson"
+msgstr "フォートネルソン"
+
 #: wp-admin/includes/continents-cities.php:126
 msgid "Ensenada"
 msgstr "エンセナダ"
@@ -1730,6 +1714,10 @@ msgstr "キュラソー"
 #: wp-admin/includes/continents-cities.php:115
 msgid "Cuiaba"
 msgstr "クイアバ"
+
+#: wp-admin/includes/continents-cities.php:114
+msgid "Creston"
+msgstr "クレストン"
 
 #: wp-admin/includes/continents-cities.php:113
 msgid "Costa Rica"
@@ -1799,6 +1787,10 @@ msgstr "ベレン"
 msgid "Barbados"
 msgstr "バルバドス"
 
+#: wp-admin/includes/continents-cities.php:93
+msgid "Bahia Banderas"
+msgstr "バイーア・デ・バンデラス"
+
 #: wp-admin/includes/continents-cities.php:92
 msgid "Bahia"
 msgstr "バイーア"
@@ -1834,6 +1826,10 @@ msgstr "サンルイス"
 #: wp-admin/includes/continents-cities.php:84
 msgid "San Juan"
 msgstr "サンフアン"
+
+#: wp-admin/includes/continents-cities.php:83
+msgid "Salta"
+msgstr "サルタ"
 
 #: wp-admin/includes/continents-cities.php:82
 msgid "Rio Gallegos"
@@ -2007,6 +2003,10 @@ msgstr "ハルツーム"
 #: wp-admin/includes/continents-cities.php:40
 msgid "Kampala"
 msgstr "カンパラ"
+
+#: wp-admin/includes/continents-cities.php:39
+msgid "Juba"
+msgstr "ジュバ"
 
 #: wp-admin/includes/continents-cities.php:38
 msgid "Johannesburg"
